--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Hokkaido 2025</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&family=Zen+Maru+Gothic:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script>
       tailwind.config = {
         theme: {
@@ -52,6 +53,6 @@
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="index.js"></script> 
+    <script type="text/babel" src="index.js"></script> 
   </body>
 </html>
